# my-library

./: Cargo.toml  README.md  wrangler.toml
backend/: .gitignore  Cargo.toml
backend/migrations/: 0001_initial.sql
backend/src/: auth.rs  lib.rs
backend/src/books/: get_book_by_isbn.rs  mod.rs  models.rs
backend/src/database/: add_book.rs  get_books.rs  mod.rs  models.rs
backend/src/utility/: modify_name.rs
docs/: database.md
frontend/: package.json  pnpm-lock.yaml  wrangler.jsonc
frontend/src/routes/: +page.svelte
frontend/src/routes/admin/: +page.svelte
sqls/: books.sql  dummy_data.sql  scheme.sql
src/: lib.rs
src/books/: get_book_by_isbn.rs  get_isbn.rs  mod.rs  models.rs
src/database/: add_book.rs  get_books.rs  mod.rs  models.rs
src/utility/: custom_deserializer.rs  mod.rs
