[package]
name = "my-library"
version = "0.1.0"
edition = "2021"
authors = ["kentakom1213 <kentakom1213@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["http", "axum"] }
worker-macros = { version = "0.5.0", features = ['http'] }
axum = { version = "0.7", default-features = false, features = ["json"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = "1.0.219"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
