[package]
name = "my-library"
version = "0.1.0"
edition = "2021"
authors = ["kentakom1213 <kentakom1213@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["http", "d1"] }
worker-macros = { version = "0.5.0", features = ["http"] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
reqwest = { version = "0.12.18", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
    "json",
] }
serde = "1.0.219"
serde_json = "1.0.140"
tracing-web = "0.1.3"
time = { version = "0.3", features = ["wasm-bindgen"] }
